--- a/index.html
+++ b/index.html
@@ -15,30 +15,34 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/styles.css" />
-    <title></title>
+    <title>Weather App</title>
   </head>
   <body>
-    <nav class="navbar bg-body-tertiary">
-      <div class="container-fluid">
-        <form id="search-form">
-          <input
-            type="search"
-            placeholder="Search your city..."
-            autocomplete="off"
-            autofocus="on"
-            id="search-text-input"
-          />
-          <button
-            class="btn btn-outline-success"
-            type="submit"
-            id="city-search-button"
-          >
-            Search
-          </button>
-        </form>
-      </div>
-    </nav>
     <div class="container">
+      <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <form id="search-form" class="mb-3">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Type a city.."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+            </div>
+          </form>
+        </div>
+      </nav>
       <div class="card-1" style="width: 50rem">
         <div class="row top-row">
           <div class="col date-time">
