--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
     <script
@@ -19,8 +19,8 @@
   </head>
   <body>
     <div class="container">
-      <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
           <form id="search-form" class="mb-3">
             <div class="row">
               <div class="col-9">
@@ -42,7 +42,7 @@
             </div>
           </form>
         </div>
-      </nav>
+    
       <div class="card-1" style="width: 50rem">
         <div class="row top-row">
           <div class="col date-time">
