--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </form>
           </div>
           <div class="overview">
-            <h1 id="city"></h1>
+            <h1 id="city">Madrid</h1>
             <ul>
               <li>Last updated: <span id="date"></span></li>
               <li id="description"></li>
@@ -60,45 +60,15 @@
                 </div>
               </div>
             </div>
-            <h5 class="card-title">Upcoming Forecast</h5>
-            <p class="card-text"></p>
-            <div class="container text-center">
-              <div class="row">
-                <div class="container text-center">
-                  <div class="row">
-                    <div class="col">M</div>
-                    <div class="col">T</div>
-                    <div class="col">W</div>
-                    <div class="col">T</div>
-                    <div class="col">F</div>
-                  </div>
-                  <div>
-                    <div class="container text-center">
-                      <div class="row">
-                        <div class="col">18°C</div>
-                        <div class="col">19°C</div>
-                        <div class="col">19°C</div>
-                        <div class="col">17°C</div>
-                        <div class="col">19°C</div>
-                      </div>
-                    </div>
-                    <div class="container text-center">
-                      <div class="row">
-                        <div class="col">🌥</div>
-                        <div class="col">☀</div>
-                        <div class="col">🌥</div>
-                        <div class="col">🌥</div>
-                        <div class="col">🌥</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
+              </ul>
             </div>
           </div>
-        </div>
-        <script src="src/script.js"></script>
-      </div>
+          <div class="weather-forecast" id="forecast"></div>
+      <script src="src/script.js"></script>
     </div>
   </body>
 </html>
