--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <script
-      src="https://kit.fontawesome.com/2edafc095a.js"
-      crossorigin="anonymous"
-    ></script>
+     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <link rel="stylesheet" href="src/styles.css" />
     <title>Weather App</title>
   </head>
