--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <input
                     type="submit"
                     value="Search"
-                    class="btn btn-primary w-100"
+                    class="btn btn-info"
                   />
                 </div>
               </div>
