--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <link rel="stylesheet" href="src/styles.css" />
     <title>Weather App</title>
@@ -32,11 +32,7 @@
                   />
                 </div>
                 <div class="col-3">
-                  <input
-                    type="submit"
-                    value="Search"
-                    class="btn btn-info"
-                  />
+                  <input type="submit" value="Search" class="btn btn-info" />
                 </div>
               </div>
             </form>
@@ -56,7 +52,8 @@
                   <strong id="temperature"></strong
                   ><span class="units"
                     ><a href="#" id="celsius-link" class="active">°C</a> |
-                    <a href="#" id="fahrenheit-link">°F</a></span>
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
                 </div>
               </div>
             </div>
@@ -67,15 +64,17 @@
               </ul>
             </div>
           </div>
-             <small>
-          <a
-            href="https://github.com/lorries79/she-codes-plus-weather-app"
-            target="_blank"
-            >Open-source code</a
-          >
-          by Grace Louise 
-        </small>
-      <script src="src/script.js"></script>
+        </div>
+      </div>
+      <small class="source-code">
+        <a
+          href="https://github.com/lorries79/she-codes-plus-weather-app"
+          target="_blank"
+          >Open-source code</a
+        >
+        by Grace Louise
+      </small>
     </div>
+    <script src="src/script.js"></script>
   </body>
 </html>
