--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
               </ul>
             </div>
           </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
       </div>
       <small class="source-code">
